# np-scout

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.dev  MANIFEST.in  README.md  environment.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: build-container.yml  release.yml  test.yml
np_scout/: __init__.py  __main__.py  np_scout_model.py  version.py
np_scout/data/: nerdd.yml
np_scout/preprocessing/: __init__.py  canonicalize_tautomer.py  do_smiles_roundtrip.py  neutralize_charges.py  np_scout_preprocessing_pipeline.py  strip_salts.py
tests/: steps.py  test_valid_predictions.py
tests/features/: consistent_predictions.feature  valid_predictions.feature
tests/steps/: checks.py  model.py
