[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "np-scout"
version = "0.0.2"
description = "NP-Scout: Identification and visualization of natural product-likeness"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Ya Chen" },
    { name = "Axinya Tokareva" },
    { name = "Steffen Hirte", email = "steffen.hirte@univie.ac.at" },
]
maintainers = [
    { name = "Johannes Kirchmair", email = "johannes.kirchmair@univie.ac.at" },
]
dependencies = [
    "rdkit==2020.09.1",
    "scikit_learn==0.23.2",
    "numpy==1.19.2",
    "matplotlib>=3",
    "nerdd-module>=0.3.34",
    "importlib-resources>=5; python_version<'3.9'",
    "importlib-metadata>=4.6; python_version<'3.10'",
]

[project.optional-dependencies]
dev = ["mypy", "ruff"]
test = [
    "pytest",
    "pytest-watcher",
    "pytest-cov",
    "pytest-bdd==7.3.0",
    "hypothesis",
    "hypothesis-rdkit",
]

[project.urls]
Repository = "https://github.com/molinfo-vienna/np-scout"

[project.scripts]
npscout = "np_scout.__main__:main"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
addopts = "-x --cov-report=xml --cov-report=term --cov=np_scout"

[tool.pytest-watcher]
ext = ["py", "feature"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_vcs_release = true
